<resources>
    <string translatable="false" name="game_services_project_id">265925804312</string>
    <string name="app_name">BreakingBlock</string>
    <string name="game_start">GAME START</string>
    <string name="rank">Ranking</string>
    <string name="score_label">점수: %d</string>
    <string name="high_score_label">최고점수: %d</string>
    <string name="exit">EXIT</string>
    <string name="retry">RETRY</string>
    <string name="save">SAVE</string>
    <string name="worldRank">world ranking</string>
    <string name="순위표">순위표</string>
    <string name="leaderboard_id">CgkImIKn094HEAIQAQ</string>
</resources>